Correcciones en la redacción | Lógica - DB

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -32,7 +32,7 @@ Un conjunto de sentencias se dice ***consistente*** solo si es posible que todas
 3. No es posible tener gran moral y robar.
 
 Estas tres sentencias no pueden ser simultáneamente verdaderas, a lo sumo solo dos de ellas pueden serlo simultáneamente.
-Sorprendentemente, las nociones de consistencia y validez están relacionadas, a pesar de ser conceptos diferentes, ya que decir que un argumento es válido equivale a decir que algo es imposible que las premisas sean verdaderas y la conclusión falsa. De la misma manera si un conjunto de sentencias es inconsistente es equivalente a decir que es imposible que todas las sentencias no pueden ser simultáneamente verdaderas.
+Sorprendentemente, las nociones de consistencia y validez están relacionadas, a pesar de ser conceptos diferentes, ya que decir que un argumento es válido equivale a afirmar que es imposible que las premisas sean verdaderas y la conclusión falsa. De la misma manera si un conjunto de sentencias es inconsistente es equivalente a decir que es imposible que todas las sentencias no pueden ser simultáneamente verdaderas.
 Un argumento válido garantiza que la conclusión es verdadera, mientras que un conjunto inconsistente garantiza que no es posible que sus miembros sean todos simultáneamente verdaderos.
 >[!tldr] Relación entre Consistencia y Validez
 >El procedimiento para testear que un argumento es válido o no consta de los siguientes pasos:
