--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -2,8 +2,9 @@ El cálculo de predicados es la intersección de un conjunto de teorías de prim
 >[!tldr] Limitaciones del Cálculo Proposicional
 >El cálculo proposicional presenta algunas falencias desde el punto de vista de su capacidad de representación. En especial cuando se intenta representar propiedades de individuos, ya que no es posible realizar tal acción de manera natural. Esta habilidad es provista en el cálculo de predicados.
 #### Predicados y Cuantificadores
-La palabra ***predicado*** tiene varios significados, entre ellos se considera a un predicado como *la afirmación de una cualidad, atributo, propiedad de un individuo* o también como *la parte de una sentencia que expresa lo que se dice del sujeto*. Para la oración "*Pedro es alto*" se dice que el individuo Pedro (sujeto) tiene el atributo o propiedad de ser alto (predicado).
-En el cálculo proposicional ($\mathcal{L}$) podemos representar dicha afirmación como $A_1$, pero esto no refleja la semántica que se intenta tener de las sentencias representadas. El cálculo de predicados permite mantener la conexión entre la representación y lo que se quiere representar, por ejemplo, para representar la altura de Pedro y Juan se lo puede hacer de la siguiente manera `alto(pedro)`, `alto(juan)`. Esta expresividad le permite al cálculo de predicados expresar relaciones que existen entre los sujetos de una relación y sentencias mucho más complejas, ya que se introducen ***cuantificadores*** que permiten referirse a individuos de forma general, estos operadores son:
+La palabra ***predicado*** tiene varios significados, entre ellos se considera a un predicado como *la afirmación de una cualidad, atributo, propiedad de un individuo* o también como *la parte de una sentencia que expresa lo que se dice del sujeto*. Por ejemplo, para la oración “*Pedro es alto*” se dice que el individuo Pedro (sujeto) tiene el atributo o propiedad de ser alto (predicado).
+En el cálculo proposicional ($\mathcal{L}$) podemos representar dicha afirmación como $A_1$, pero esto no refleja la semántica que se intenta tener de las sentencias representadas. El cálculo de predicados permite mantener la conexión entre la representación y lo que se quiere representar, por ejemplo, para representar la altura de Pedro y Juan se lo puede hacer de la siguiente manera `alto(pedro)`, `alto(juan)`.
+Esta expresividad le permite al cálculo de predicados expresar relaciones que existen entre los sujetos de una relación y sentencias mucho más complejas, ya que se introducen ***cuantificadores*** que permiten referirse a individuos de forma general, estos operadores son:
 1. El cuantificador $\forall$, es el cuantificador universal y permite hacer referencia a todos los individuos de un dominio en particular. Por ejemplo $(\forall x) (perro(x) \rightarrow mamifero(x))$.
 2. El cuantificador $\exists$, es el cuantificador de existencia y permite hacer referencia a uno o más individuos en el dominio sin especificar de forma explícita cuál es. Por ejemplo $((\exists x) hablo(x))$.
 ## Lenguaje y Semántica para el Cálculo de Predicados
@@ -15,7 +16,7 @@ El lenguaje $P$ definido para el cálculo de predicados consta de los siguientes
 5. **Conectivos lógicos:** $\{¬; \rightarrow; \forall\}$, el resto de conectivos y operadores se pueden construir a partir de esos tres conectivos, aunque por cuestiones de practicidad se pueden utilizar las reglas de reescritura presentadas con anterioridad.
 6. **Símbolos auxiliares:** $\{);(; ,\}$.
 
-Tanto para las letras funcionales como para las letras predicativas $k$ representa el nombre y $n$ su aridad, por lo tanto, dos letras funcionales o letras predicativas son iguales si poseen el mismo nombre y aridad. Si bien formalmente se utilizan números enteros para $k$ y $n$ cuando se define cada construcción del lenguaje intentaremos utilizar letras sin índices para evitar confusiones.
+Tanto para las letras funcionales como para las letras predicativas, $k$ representa el nombre y $n$ su aridad, por lo tanto, dos letras funcionales o letras predicativas son iguales si poseen el mismo nombre y aridad. Si bien formalmente se utilizan números enteros para $k$ y $n$ cuando se define cada construcción del lenguaje, intentaremos utilizar letras sin índices para evitar confusiones.
 >[!tldr] Reglas de Precedencia
 >En el cálculo de predicados las reglas de precedencia son similares a las del cálculo proposicional con la diferencia que se agregan dos operadores adicionales. En este caso la precedencia es la siguiente:
 >
@@ -38,7 +39,7 @@ Para el cálculo de predicados, las fórmulas bien formadas pueden ser construid
 >
 >Las fórmulas bien formadas se dicen cerradas si no contienen variables libres.
 ## Verdad, Falsedad e Interpretaciones
-En el cálculo proposicional las fórmulas bien formadas solo estaban construidas a partir de letras proposicionales y posiblemente conectivos lógicos. Por esta razón bastaba un valor de verdad a las letras proposicionales para obtener una interpretación, esto significaba que para explicitar todas las interpretaciones posibles bastaba con construir su tabla de verdad.
+En el cálculo proposicional las fórmulas bien formadas solo estaban construidas a partir de letras proposicionales y posiblemente conectivos lógicos. Por esta razón bastaba con asignar un valor de verdad a las letras proposicionales para obtener una interpretación, esto significaba que para explicitar todas las interpretaciones posibles bastaba con construir su tabla de verdad.
 Para el cálculo de predicados la situación es más compleja, ya que para establecer si una fórmula bien formada es verdadera o falsa en una interpretación es necesario tener en cuenta:
 1. El valor que toman las variables.
 2. Los valores de las constantes.
@@ -47,19 +48,19 @@ Para el cálculo de predicados la situación es más compleja, ya que para estab
 Ahora definiremos con mayor precisión los conceptos de satisfacibilidad y verdad en una interpretación. Dada una interpretación con dominio $D$, consideremos $\Sigma$ como el conjunto de secuencias numerables de elementos de $D$. Estas secuencias están formadas por elementos de $D$, tienen la forma $s = (b_1, b_2, ..., b_n, ...)$. Utilizaremos estas secuencias para definir la satisfacibilidad de las fórmulas bien formadas del sistema $P$.
 Dada una secuencia $s = (b_1, b_2, ..., b_n, ...)$ de $\Sigma$, definimos una función $s^*$ cuya entrada es el conjunto de todos los términos del lenguaje $P$ y que toma valores en $D$. La función $s^*$ se define por casos de acuerdo a los diferentes tipos de términos que puede tener como parámetro, por lo tanto:
 - Si $t$ es una variable $x_i$ entonces $s^*(t) = s^*(x_i) = b_i$, es decir, $s^*$ toma el valor i-ésimo de la secuencia $s$.
-- Si $t$ es una constante individual entonces $s^*(t)$ es el elemento fijo de $D$ asignado a esa constante por interpretación.
+- Si $t$ es una constante individual, entonces $s^*(t)$ es el elemento fijo de $D$ asignado a esa constante por interpretación.
 - Si $f_j$ es una letra funcional, $g$ es la correspondiente operación en $D$ asignada por la interpretación de $t_1, t_2, ..., t_n$ los cuales son términos, entonces $s^*(f_j(t_1, t_2, ..., t_n)) = g(s^*(t_1), s^*(t_2), ..., s^*(t_n))$.
 
 Dada una secuencia $s = (b_1, b_2, ..., b_n, ...)$ de $\Sigma$ decimos que $s$ satisface a una fórmula bien formada $A$ de acuerdo a los siguientes casos:
-1. Si $A$ es una fórmula bien formada atómica $p_j(t_1, t_2, ..., t_n )$, sea $P_j$ es la relación que le corresponde a $p_j$ por la interpretación, entonces la secuencia $s$ satisface a $A$ si $P_j(s^*(t_1), s^*(t_2), ..., s^*(t_n))$, es decir, la n-upla $(s^*(t_1), s^*(t_2), ..., s^*(t_n)) \in P_j$.
+1. Si $A$ es una fórmula bien formada atómica $p_j(t_1, t_2, ..., t_n )$, sea $P_j$ la relación que le corresponde a $p_j$ por la interpretación, entonces la secuencia $s$ satisface a $A$ si $P_j(s^*(t_1), s^*(t_2), ..., s^*(t_n))$, es decir, la n-upla $(s^*(t_1), s^*(t_2), ..., s^*(t_n)) \in P_j$.
 2. $s$ satisface $¬A$ si y solo si $s$ no satisface a $A$.
 3. $s$ satisface $A \rightarrow B$ si $s$ satisface $B$ o si $s$ no satisface a $A$.
 4. $s$ satisface $(\forall x_i) A$ si cada secuencia $w$ de $\Sigma$ que difiere de $s$ en a lo sumo en el i-ésimo componente satisface a $A$.
 ### Verdad y Falsedad
 Una fórmula bien formada $A$ es verdadera para una interpretación particular si, cada sentencia en $\Sigma$ satisface a $A$. Por lo tanto, una fórmula bien formada es falsa en una interpretación dada si ninguna de las secuencias en $\Sigma$ satisface a $A$.
-Puede que una fórmula bien formada $A$ no sea ni verdadera ni falsa en una interpretación, puesto que puede existir parte de las secuencias en $\Sigma$ que no satisfagan a $A$ y otras sí. Con esto en mente y aplicando algunas reglas del cálculo proposicional tenemos que:
+Puede que una fórmula bien formada $A$ no sea ni verdadera ni falsa en una interpretación, puesto que puede existir parte de las secuencias en $\Sigma$ que no satisfagan a $A$ y otras sí. Con esto en mente y aplicando algunas reglas del cálculo proposicional, tenemos que:
 1. $A$ es falsa en una interpretación si $¬A$ es verdadera en esa interpretación y viceversa.
-2. Si $A$ y $A \rightarrow B$ son verdaderos en una interpretación entonces $B$ también es verdadero por Modus Ponens.
+2. Si $A$ y $A \rightarrow B$ son verdaderos en una interpretación, entonces $B$ también es verdadero por Modus Ponens.
 3. En una interpretación particular de la forma $A \rightarrow B$ es falsa si $A$ es verdadera y $B$ es falsa.
 4. Para los conectivos introducidos por reescritura:
 	- $s$ satisface $A \wedge B$ si y solo si $s$ satisface $A$ y $B$ simultáneamente.
@@ -77,7 +78,7 @@ El lema indica que podemos realizar una sustitución de variables sin que cambie
 >Si $((\forall x_i)A(x))$ es satisfecha por $s$, entonces también lo es $A(t)$. Por lo tanto, $((\forall x_i)A(x)) \rightarrow A(t)$.
 
 Una fórmula bien formada $A$ se dice ***lógicamente válida*** si y solo si $A$ es verdadera en cada interpretación ($\vDash A$). Una fórmula bien formada es ***verdadera*** en una interpretación si es satisfecha por todas las sentencias de $\Sigma$ y es lógicamente verdadera en todas las interpretaciones. Mientras que una fórmula bien formada $A$ se dice ***satisfacible*** si y solo si existe una interpretación en la que $A$ es satisfecha por al menos una sentencia de $\Sigma$. Por otro lado, una fórmula bien formada se dice ***contradictorio*** o insatisfacible si y solo si $¬A$ es lógicamente válida.
-Se dice que una fórmula bien formada $A$ ***implica lógicamente*** a una fórmula bien formada $B$ si y solo si en cada interpretación cada sentencia de $\Sigma$ que satisface $A$ también satisface $B$, es decir $A \vDash B$. Consecuentemente, decimos que una fórmula bien formada $A$ es una ***consecuencia lógica*** de un conjunto $S$ de fórmulas bien formadas, si y solo si en cada interpretación cada sentencia de $\Sigma$ que satisface a cada fórmula bien formada en $S$ también satisface a $A$, es decir $S \vDash A$.
+Se dice que una fórmula bien formada $A$ ***implica lógicamente*** a una fórmula bien formada $B$ si y solo si en cada interpretación cada sentencia de $\Sigma$ que satisface $A$ también satisface $B$, es decir, $A \vDash B$. Consecuentemente, decimos que una fórmula bien formada $A$ es una ***consecuencia lógica*** de un conjunto $S$ de fórmulas bien formadas, si y solo si en cada interpretación cada sentencia de $\Sigma$ que satisface a cada fórmula bien formada en $S$ también satisface a $A$, es decir $S \vDash A$.
 >[!tldr] Equivalencia y Propiedades de la Instanciación
 >- $A$ y $B$ se dicen lógicamente equivalentes si y solo si $A$ implica lógicamente $B$ y $B$ implica lógicamente $A$.
 >- Cualquier sentencia de un lenguaje formal que sea una instancia de una fórmula bien formada que es lógicamente válida se dice ***lógicamente verdadera***, mientras que las sentencias que son instancias de una fórmula bien formada que es una contradicción se dicen ***lógicamente falsas***.
