--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
@@ -27,7 +27,7 @@ Para determinar si $t$ está libre para $x$ en $A$, primero se encuentran todas 
 >Como observar esta interpretación siempre será falsa debido a que $t$ no estaba libre para $x$, lo que provoco que el término sea alcanzado indebidamente por el cuantificador alterando su interpretación.
 ## Deducción para el Cálculo de Predicados
 Recordemos que una regla de inferencia $R$ es una relación entre fórmulas bien formadas de una teoría $\mathcal{T}$. Para cada regla $R$, existe un único entero positivo $j$ que determina que para cualquier conjunto de fórmulas $F_1, F_2, ..., F_j$ y cualquier fórmula bien formada $A$ de $\mathcal{T}$, existe un procedimiento efectivo para decidir si $(F_1, F_2, ..., F_j, A) \in R$. En otras palabras, esto permite deducir $A$ a partir de $F_1, F_2, ..., F_j$.
-Aclarado una vez todo esto, para el cálculo de predicados las reglas de inferencia son similares a las del cálculo proposicional, con solo una regla adicional:
+Aclarado esto, para el cálculo de predicados las reglas de inferencia son similares a las del cálculo proposicional, con solo una regla adicional:
 1. Modus ponens $A, A\rightarrow B \vdash B$.
 2. Generalización $A \vdash (\forall x)A$.
 ### Consistencia de la Teoría $\mathcal{P}$
