--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
@@ -32,14 +32,14 @@ Sea $A$ una fórmula bien formada en forma prenexa y supongamos que el prefijo d
 2. Si no aparece ningún cuantificador universal a la izquierda de $(\exists x)$ se reemplaza a la variable $x$ en la matriz de $A$ por una constante, que no pertenezca a la matriz de $A$.
 
 Este proceso se repite hasta que no queden cuantificadores existenciales en el prefijo de $A$. Por ejemplo para la siguiente fórmula en forma prenexa $(\forall x)(\exists y)(\exists z)((A(x) \vee B(y)) \wedge C(z))$ la fórmula resultante de aplicar el proceso de skolemización es la siguiente $(\forall x)((A(x) \vee B(sk_1(x)))\wedge C(sk_2(x)))$ donde $sk_1$ y $sk_2$ son términos de skolem para $y$ y $z$ respectivamente.
-Veamos ahora la siguiente fórmula $(\exists x)(\forall y)(\exists z)(A(x) \wedge (B(y) \vee C(z)))$ en este caso la fórmula skolemizada nos quedaría $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ en este caso $a$ es una constante arbitraria que no aparecía en la matriz de $A$ y  $sk3$ es una función de Skolem.
+Veamos ahora la siguiente fórmula $(\exists x)(\forall y)(\exists z)(A(x) \wedge (B(y) \vee C(z)))$ en este caso la fórmula skolemizada nos quedaría $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ en este caso $a$ es una constante arbitraria que no aparecía en la matriz de $A$ y  $sk_3$ es una función de Skolem.
 >[!tldr] Relación entre Forma de Skolem y Forma Prenexa
 >La forma de Skolem no es equivalente a la forma prenexa, pero la implica lógicamente, es decir, cada vez que la forma skolemizada es verdadera la forma prenexa también lo es. Sin embargo, la forma prenexa es satisfacible si y solo si la forma de Skolem es satisfacible. Formalmente se denota de la siguiente manera:
->$$S_k \vDash P_x \wedge P_x \text{ es satisfacible si } S_k \text{es satisfacible}$$
+>$$S_k \vDash P_x \wedge P_x \text{ es satisfacible si } S_k \text{ es satisfacible}$$
 ## Resolución en el Cálculo de Predicados
 Recordemos que el mecanismo lógico de computación es el cálculo de resolventes a través de la eliminación de literales complementarios. La forma prenexa skolemizada contiene un prefijo de cuantificadores universales y una matriz en forma clausal que fácilmente puede transformarse a forma normal conjuntiva reducida.
 Una vez que se hace esto se puede eliminar el prefijo asumiendo que todas las variables que figuran en la matriz se encuentran cuantificadas universalmente. Por ejemplo, la fórmula skolemizada $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ se transforma en $(A(a) \wedge (B(y) \vee C(sk_3(y)))$.
-En la lógica proposicional, se utiliza la eliminación de literales complementarios entre cláusulas para obtener resolventes. En el cálculo de predicados también se utilizará la eliminación de literales complementarios, pero en $\mathcal{P}$ hay constantes, variables y funciones lo que introduce dificultades a la hora de definir que términos son complementarios. Para mayor entendimiento véase la imagen.
+En la lógica proposicional, se utiliza la eliminación de literales complementarios entre cláusulas para obtener resolventes. En el cálculo de predicados también se utilizará la eliminación de literales complementarios, pero en $\mathcal{P}$ hay constantes, variables y funciones, lo que introduce dificultades a la hora de definir que términos son complementarios. Para mayor entendimiento véase la imagen.
 ![[pares-complementarios.png]]
 
 >[!tldr] Concepto de Variables Lógicas
@@ -60,9 +60,9 @@ Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de par
 >Las dos condiciones antes expuestas aseguran que si dos substituciones $\sigma_1$ y $\sigma_2$ son iguales como conjuntos entonces tendrán el mismo efecto al aplicarse sobre cualquier expresión. Concretamente, establecen que el orden de aplicación de las substituciones individuales no afecta al resultado final de la substitución.
 
 La manera de denotar una substitución $\sigma$ varía, ya que existen diversas formas de denotarlo, por cuestiones de practicidad la denotaremos de la siguiente manera $[(t_1, x_1),(t_2, x_2), \cdots, (t_n, x_n)]$, donde cada par de componentes $(t_i, x_i)$ expresa el requerimiento de que se reemplace con el término $t_i$ cada aparición de $x_i$. Las substituciones pueden aplicarse sobre términos o fórmulas bien formadas, por lo que usaremos la palabra ***expresión*** para referirnos a estos.
-Definimos a la aplicación de una sustitución $\sigma$ a una expresión $A$ denotado como $A\sigma$, como el término o fórmula bien formada obtenida de $A$ reemplazando cada aparición de $x$ por $t$ en $A$ para cada par $(t, x)$ en $\sigma$. Obsérvese en este caso que si $\sigma$ es un conjunto vacío la aplicación de esta substitución sobre $A$ es $A$ misma.
+Definimos a la aplicación de una sustitución $\sigma$ a una expresión $A$ denotado como $A\sigma$, como el término o fórmula bien formada obtenida de $A$ reemplazando cada aparición de $x$ por $t$ en $A$ para cada par $(t, x)$ en $\sigma$. Obsérvese en este caso que si $\sigma$ es un conjunto vacío, la aplicación de esta substitución sobre $A$ es $A$ misma.
 >[!example] Ejemplo de Aplicación de una Substitución
->Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$ y se denota de la siguiente manera:
+>Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$, denotandose de la siguiente manera:
 >$$f(x,b)\sigma = f(x,b)[(a,x)] = f(a, b)$$
 
 $A$ se dice que es una ***instancia de una substitución*** de $B$ si existe una substitución $\sigma$ tal que $A = B\sigma$.
@@ -77,8 +77,8 @@ Sea $\mathbb{L} = \{L_1, L_2. \cdots, L_n\}$ un conjunto de expresiones y $\thet
 Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\theta$ es una ***substitución unificadora más general*** o ***unificadora más general*** si para cualquier otro unificador $\mu$ existe una substitución $\lambda$ tal que $\mathbb{L}\mu = \mathbb{L}\theta\lambda$.
 >[!example] Ejemplo de Substitución Unificadora más General
 >Supongamos que tenemos el siguiente conjunto de expresiones $\mathbb{L} = \{p(x), p(y)\}$ y tenemos los siguientes unificadores:
->1. $\mu = {(a, x), (a, y)}$.
->2. $\theta = [(x/y)]$
+>1. $\mu = [(a, x), (a, y)]$.
+>2. $\theta = [(x, y)]$
 >
 >El primer unificador unifica $\mathbb{L}\mu = \{p(a)\}$, mientras que el segundo unificador unifica $\mathbb{L}\theta = \{p(x)\}$. En este caso el segundo unificador es más general porque permite que las variables permanezcan, es decir, el término resultante es menos específico.
 
@@ -100,14 +100,14 @@ Intuitivamente, un unificador más general de un conjunto de expresiones es aque
 >5. Conectivos lógicos los cuales poseen el orden de precedencia ya descripto anteriormente.
 ### Procedimiento de Unificación de Robinson
 El proceso de unificación de Robinson es un algoritmo fundamental, utilizado para determinar si existe una sustitución que hace que dos expresiones lógicas sean idénticas. Este procedimiento cuenta con los siguientes pasos:
-1. Sea $\mathbb{L}$ un conjunto de expresiones, $\theta_1 = \varepsilon$ y $k = 0$
+1. Sea $\mathbb{L}$ un conjunto de expresiones, $\theta_0 = \varepsilon$ y $k = 0$
 2. Se actualiza el valor de $k$ tal que $k \leftarrow k + 1$. Si los elementos de $\mathbb{L}\theta_k$ son todos iguales entonces se asigna $\theta_0 \leftarrow \theta_k$ y se detiene emitiendo $\theta_0$ como substitución unificadora. Si $\mathbb{L}\theta_k$ no es un conjunto unitario el procedimiento continúa.
 3. Sea $s_k$ y $t_k$ las dos expresiones minimales en el orden lexicográfico dentro del conjunto de desacuerdos de $\mathbb{L}\theta_k$. Si $s_k$ es una variable y $s_k$ no aparece en $t_k$ entonces $\theta_{k + 1} \leftarrow \theta_k[(t_k, s_k)]$ y volver a realizar el paso anterior. En caso contrario se detiene el procedimiento, ya que no existe unificación.
 
 >[!note] Occur Check
 >La comprobación realizada por el tercer paso en el cual se comprueba si $s_k$ es una variable y no aparece en $t_k$ recibe el nombre de ***occur check*** y se asegura de realizar de manera correcta las sustituciones e instanciamientos de variables.
 
-Dado cualquier conjunto finito, no vacío, de expresiones el algoritmo de unificación siempre termina. Si no fuera así se generaría una secuencia infinita $\mathbb{L}\theta_1, \mathbb{L}\theta_2, \cdots, \mathbb{L}\theta_n, \cdots$ donde cada $\mathbb{L}\theta_i$ es un conjunto de expresiones.
+Dado cualquier conjunto finito, no vacío, de expresiones el algoritmo de unificación siempre termina. Si no fuera así se generaría una secuencia infinita $\mathbb{L}\theta_1, \mathbb{L}\theta_2, \dots, \mathbb{L}\theta_n, \dots$ donde cada $\mathbb{L}\theta_i$ es un conjunto de expresiones.
 Obsérvese que $\mathbb{L}\theta_{i+1}$ se obtiene a partir de $\mathbb{L}\theta_i$ y además $\mathbb{L}\theta_{i+1}$ contiene una variable menos que $\mathbb{L}\theta_i$. Como las expresiones originales contenidas en $\mathbb{L}$ solo incluyen números finitos de variables no es posible prolongar la secuencia indefinidamente.
 >[!tldr] Teorema
 >Sea $\mathbb{L}$ un conjunto finito, no vacío, de expresiones. Si $\mathbb{L}$ es unificable entonces el algoritmo unificador siempre termina y el unificador encontrado es un unificador más general de $\mathbb{L}$.
