--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
@@ -1,6 +1,6 @@
 Para poder calcular resolventes en $\mathcal{P}$ debemos extender la idea de resolvente básica que fue dada para $\mathcal{L}$. Es necesario generalizar la definición de resolvente para lograr calcular resolventes en $\mathcal{P}$. Fundamentalmente, para esto es necesario definir como calcular resolventes entre cláusulas no básicas.
 La definición de resolvente para cláusulas arbitrarias es una definición general que no requiere especificar como se encuentra el unificador más general. Sin embargo, para encontrar el unificador más general es posible utilizar el procedimiento de cálculo de substituciones unificadoras más generales, o unificador más general, utilizando el ***procedimiento de unificación de Robinson***.
-En el cálculo de predicados una de dos cláusulas arbitrarias $C_1$ y $C_2$ es una tercera cláusula $C_3$ obtenida a partir del siguiente procedimiento:
+En el cálculo de predicados una unificación de dos cláusulas arbitrarias $C_1$ y $C_2$ es una tercera cláusula $C_3$ obtenida a partir del siguiente procedimiento:
 1. Si $w_1, w_2, \cdots, w_m$ son las variables en $C_2$ y la variable de mayor índice que aparece en $C_1 \cup C_2$ de acuerdo al orden lexicográfico es $x_k$, sea $\theta$ la siguiente substitución:
 $$\theta = [(x_{k+1},w_1), (x_{k+2},w_2), ..., (x_{k+m},w_m)]$$
 
@@ -55,7 +55,7 @@ Una resolución unitaria requiere que al menos una de las cláusulas madre en ca
 Una derivación unitaria es una derivación por resolución en la que cada resolución es una resolución unitaria. Mientras que una refutación unitaria es una derivación unitaria de $\bot$.
 Nótese que la resolución input y resolución unitaria son equivalentes en el sentido de que existirá una refutación input de un conjunto insatisfacible $S$ si y solo si existe una refutación unitaria de $S$, por lo tanto, la resolución unitaria es también incompleta. 
 >[!tldr] Completitud de la Resolución Unaria y la Resolución Input
->Si bien hasta ahora se ha dicho que ambos procesos de resolución son incompletos, es posible demostrar que ambas son completas sobre conjuntos de cláusulas Horn.
+>Si bien hasta ahora se ha dicho que ambos procesos de resolución son incompletos, es posible demostrar que ambas son completas sobre conjuntos de cláusulas de Horn.
 #### Conjunto de Soporte
 Para probar un teorema $C$ a partir de un conjunto de axiomas $C_1, C_2, \cdots,C_n$ se intenta demostrar que $C_1 \wedge C_2 \wedge \cdots \wedge C_n \wedge ¬C$ es un conjunto insatisfacible. Resulta razonable, entonces suponer que el conjunto de axiomas inicial $\{ C_1, C_2, \cdots, C_n \}$ es satisfacible, de otra forma se trivializa el problema.
 Como el conjunto de axiomas, formado por cláusulas axioma, es satisfacible, si se agregan resolventes calculándolas solo a partir de ellas el conjunto resultante también es satisfacible. Por lo tanto, no es posible generar una refutación usando solo el conjunto de axiomas. La estrategia de ***conjunto de soporte*** usa este hecho evitando utilizar solo cláusulas axioma.
