--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -6,8 +6,8 @@ $$\leftarrow B_1, B_2, \dots, B_n$$
 Este tipo de cláusulas suelen recibir el nombre de consultas o cláusulas objetivo. En este caso también estamos en presencia de una cláusula de Horn. Estas metas definidas son equivalentes a $¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n$ y de ellas se asume que todas las variables de las cláusulas están cuantificadas universalmente:
 $$\forall(¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n)$$
 Usando la notación abreviada que da la cuantificación universal de las variables, esa expresión es equivalente a $\forall¬(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ que a su vez es equivalente a $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$.
-Los sistemas que utilizan programación en lógica están basados en la regla de resolución como única regla de inferencia. Esto significa que sí se trata de probar que $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de un programa $P$, se niega esa fórmula obteniendo una meta definida $\leftarrow B_1, B_2, \dots, B_n$, la cual vimos con anterioridad.
-Esta meta definida se agrega al programa $P$ y se trata de refutar el conjunto. En caso de que esto sea posible encontrar una refutación podemos afirmar que la fórmula $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de $P$. Observemos que esta meta está representada como una conjunción de literales que puede pensarse como una conjunción de submetas.
+Los sistemas de programación lógica están basados en la regla de resolución como única regla de inferencia. Esto significa que si se trata de probar que $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de un programa $P$, se niega esa fórmula obteniendo una meta definida $\leftarrow B_1, B_2, \dots, B_n$, la cual vimos con anterioridad.
+Esta meta definida se agrega al programa $P$ y se trata de refutar el conjunto. En caso de que esto sea posible encontrar una refutación, podemos afirmar que la fórmula $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de $P$. Observemos que esta meta está representada como una conjunción de literales que puede pensarse como una conjunción de submetas.
 Dada una meta $G$ de la forma $\leftarrow B_1, B_2, \dots, B_n$, equivalente a la siguiente expresión $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ y un programa $P$. No solo resulta interesante saber que $P \cup G$ es insatisfacible, es decir, $¬G$ es consecuencia lógica de $P$. Si no que dado un conjunto de variables $y_1, y_2, \dots, y_n$, las cuales están ligadas al resolver la consulta, es interesante obtener las instanciaciones de esas variables que permiten obtener la refutación, dado que estas representarán la respuesta del programa a la meta definida o consulta.
 ## Selección Lineal de Programas Definidos (SLD)
 Sea $G$ la meta $\leftarrow A_1, \dots, A_m, \dots, A_k$ y $C$ la cláusula $A \leftarrow B_1, \cdots, B_q$. Entonces $G'$ se derivará de $G$ y $C$ usando una substitución unificadora más general $\theta$ si se verifican las siguientes condiciones:
@@ -26,7 +26,7 @@ Una ***Refutación SLD*** de $P \cup \{G\}$ es una derivación-SLD finita de $P 
 >Del mismo modo, ya que para cada respuesta correcta existe una respuesta computada, podemos afirmar que $S_D(P) \subseteq S_O(P)$.
 >Basándonos en ambos teoremas se puede deducir que $S_D(P) = S_O(P)$, es decir, la semántica declarativa de un programa lógico definido coincide con su semántica operacional cuando el control de ejecución consiste en la derivación SLD.
 
-Sea $P$ un programa definido, $R$ una regla de computación y $G$ una meta definida. Todas las posibles derivaciones SLD pueden representarse en una estructura de tipo árbol denominada árbol SLD.
+Sea $P$ un programa definido, $R$ una regla de computación y $G$ una meta definida. Todas las posibles derivaciones SLD pueden representarse en una estructura de tipo árbol denominada ***árbol SLD***.
 La raíz de este árbol es etiquetada como la meta definida $G$ y dado un nodo $n$ etiquetado por la meta definida $Gn$, se crea un nodo $n_i$ para cada meta definida $Gn_i$ que puede obtenerse resolviendo el literal escogido de $R$ con la cabeza de una cláusula perteneciente a $P$.
 >[!note] Terminología de los Árboles SLD
 >- **Rama de éxito**: Rama que conduce a una refutación.
@@ -35,36 +35,38 @@ La raíz de este árbol es etiquetada como la meta definida $G$ y dado un nodo $
 >- **Regla de búsqueda**: Procedimiento de búsqueda de una refutación en un árbol SLD.
 >- **Procedimiento de refutación SLD**: Algoritmo de refutación SLD junto con la especificación de una regla de computación y una regla de búsqueda.
 
-Del teorema de completitud se deduce que la resolución SLD es un procedimiento completo independientemente de la elección de la regla de computación seleccionada, pero solo indica que existe una refutación.
-La elección de la regla de búsqueda determinará en que la refutación se encuentre o no, existen dos métodos de búsqueda:
+Del teorema de completitud se deduce que la resolución SLD es un procedimiento completo independientemente de la elección de la regla de computación seleccionada, pero esto solo indica que existe una refutación.
+La elección de la regla de búsqueda determinará si es posible la refutación se encuentre o no, existen dos métodos de búsqueda:
 - **Búsqueda a lo ancho**: Garantiza que se encontrará la rama de éxito siempre que la misma exista.
 - **Búsqueda en profundidad**: Existe la posibilidad de explorar ramas no terminantes.
 
-Prolog utiliza búsqueda en profundidad, ya que la implementación es más sencilla y utilizar menos recursos para su ejecución. Prolog utiliza una lista donde guarda los puntos en los cuales bifurca en árbol de esta forma en caso de un fallo el programa sabe donde volver para seguir recorriendo la próxima rama.
-En la lógica, un conjunto de cláusulas puede ser verdadera o falsa independiente del orden en el que estas se evalúen. En Prolog el programador se ve obligado a pensar en términos del control de ejecución de sus programas ordenando cuidadosamente las cláusulas y literales con el fin de evitar ejecuciones no terminantes, dado que las cláusulas se seleccionan de arriba abajo y los átomos de las metas de izquierda a derecha.
+Prolog utiliza búsqueda en profundidad, ya que la implementación es más sencilla y utilizar menos recursos para su ejecución. Prolog utiliza una lista donde guarda los puntos en los cuales bifurca en árbol, de esta forma en caso de un fallo el programa sabe donde volver para seguir recorriendo la próxima rama.
+En la lógica, un conjunto de cláusulas puede ser verdadera o falsa, independiente del orden en el que estas se evalúen. En Prolog el programador se ve obligado a pensar en términos del control de ejecución de sus programas ordenando cuidadosamente las cláusulas y literales con el fin de evitar ejecuciones no terminantes, dado que las cláusulas se seleccionan de arriba abajo y los átomos de las metas de izquierda a derecha.
 Otra diferencia es que Prolog incluye predicados de E/S, aritméticos y de corte que recorta el árbol SLD. Este último realmente afecta la estrategia de evaluación en los programas, y su uso pone en cuestión el carácter auténticamente declarativo del lenguaje.
+>[!note] Prolog y la Monotonicidad
+>Polog no cumple con la propiedad de monotonicidad, dado que al agregar nuevas reglas o hechos puede que ciertas conclusiones alcanzadas previamente se pierdan debido a que Prolog emplea *negación por falla* y *cortes* al momento de realizar las deducciones.
 ## Semántica de los Programas Lógicos
 Dado un conjunto de cláusulas $S$, definimos el ***Universo o Dominio de Herbrand*** de $S$ como el conjunto de términos fijos $\mathscr{H}_S$ obtenidos a partir de $S$ de la siguiente manera:
 1. Si $a$ es una constante que aparece en $S$ entonces $a$ pertenece a $\mathscr{H}_S$. Si $S$ no contuviera constantes se agrega una arbitraria.
 2. Si $t_2, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$ y $f^n_k$ es una letra funcional n-aria que pertenece a $S$ entonces $f_k^n(t_2, t_2, \dots, t_n)$ pertenece a $\mathscr{H}_S$.
 
 >[!caution] Universo de Herbrand Infinito
->El universo o dominio de Herbrand pueden ser finitos, pero si en $S$ existe al menos una letra funcional en dicho conjunto el universo de Herbrand pasa a ser infinito. En caso de que se necesite ver un ejemplo ir a las filminas de la cátedra.
+>El universo o dominio de Herbrand pueden ser finitos, pero si en $S$ existe al menos una letra funcional su universo de Herbrand pasa a ser infinito. En caso de que se necesite ver un ejemplo ir a las filminas de la cátedra.
 
 Dado un conjunto de cláusulas $S$ definimos la ***Base de Herbrand*** de $S$, denotada como $\mathscr{B}_S$, como el conjunto de átomos fijos conformado por los siguientes componentes:
 $$\mathscr{B}_S = \{p_k^n(t_2, t_2, \dots, t_n)\}$$
 Donde $p_k^n$ es una letra predicativa n-aria perteneciente a $S$ y $t_2, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$. La base de Herbrand va a ser infinita si el universo de Herbrand es infinito.
 ### Saturación y Expansión de Herbrand
 Dado un conjunto de cláusulas $S$ y un conjunto $P$ de términos fijos, entonces la saturación de $S$ sobre $P$, denotado como $P((S))$, es el conjunto que contiene todas las cláusulas fijas que es posible obtener a partir de los elementos de $S$ en los que se reemplazan las variables con los términos que son miembros de $P$. Dichos reemplazos deben ser consistentes, es decir, las apariciones de la misma variable en una cláusula se reemplazan por el mismo término.
-Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo de Herbrand, entonces la saturación de $S$ sobre $\mathscr{H}_S$, es decir $\mathscr{H}_S((S))$, se denomina ***Expansión de Herbrand*** de $S$.
+Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo de Herbrand, entonces la saturación de $S$ sobre $\mathscr{H}_S$, es decir, $\mathscr{H}_S((S))$, se denomina ***Expansión de Herbrand*** de $S$.
 >[!tldr] Teorema de Herbrand
 >Sea $S$ un conjunto finito de cláusulas y $\mathscr{H}_S$ su universo de Herbrand entonces $S$ es insatisfacible si y solo si algún subconjunto finito de $\mathscr{H}_S((S))$ es incosistente.
->En términos computacionales este teorema sugiere un método para verificar la satisfabilidad de un conjunto de cláusulas. Es posible generar de manera parcial, de forma iterativa aplicando el operador $\Re$, el universo de Herbrand y realizar las correspondientes substituciones para obtener parte de la expansión de Herbrand, si fuera inconsistente entonces $S$ sería insatisfacible.
+>En términos computacionales, este teorema sugiere un método para verificar la satisfabilidad de un conjunto de cláusulas. Es posible generar de manera parcial, aplicando de forma iterativa el operador $\Re$, el universo de Herbrand y realizar las correspondientes substituciones para obtener parte de la expansión de Herbrand, si fuera inconsistente entonces $S$ sería insatisfacible.
 ## Significado en el Cálculo de Predicados
-Sea $P$ un programa lógico. El significado de $P$, denotado como $M(P)$, es un conjunto de metas fijas deducibles de $P$. A partir de esta definición se obtiene que si un programa lógico $P$ solo contiene hechos su significado es el mismo $P$.
+Sea $P$ un programa lógico. El significado de $P$, denotado como $M(P)$, es un conjunto de metas fijas deducibles de $P$. A partir de esta definición se obtiene que si un programa lógico $P$ solo contiene hechos, su significado es el mismo $P$.
 Si el programa $P$ contiene alguna regla se presenta el problema de verificar si los literales en su cuerpo están en $M(P)$, si el cuerpo de la regla se encuentra en el significado entonces la cabeza debe estarlo. Así se puede afirmar que el significado de un programa $P$ contiene de forma explícita lo que el programa establece de forma explícita e implícita.
 Dado un programa $P$, podemos decir que el significado buscado de $P$ también es un conjunto de metas. Se espera que tales metas tengan respuestas positivas cuando se consulte a $P$ por esas metas.
-Es interesante preguntarse cuál es la relación entre el significado buscado de un programa $P$ y el significado real, $M(P)$. De manera informal decimos que un programa $P$ es correcto si el significado buscado de $P$ incluye al significado real $M(P)$. De forma similar diremos que el programa $P$ es completo si el significado real $M(P)$ incluye al significado buscado. La situación deseada es que el significado buscado y el significado real de un programa lógico $P$ coincidan, es decir que el programa sea tanto correcto como completo.
+Es interesante preguntarse cuál es la relación entre el significado buscado de un programa $P$ y el significado real, $M(P)$. De manera informal decimos que un programa $P$ es correcto si el significado buscado de $P$ incluye al significado real $M(P)$. De forma similar, diremos que el programa $P$ es completo si el significado real $M(P)$ incluye al significado buscado. La situación deseada es que el significado buscado y el significado real de un programa lógico $P$ coincidan, es decir, que el programa sea tanto correcto como completo.
 ### Interpretaciones y Modelo de Herbrand
 Sea $\mathbb{L}$ un lenguaje de primer orden. Una interpretación de Herbrand de $\mathbb{L}$ es una interpretación definida de la siguiente manera:
 - El dominio de la interpretación $\mathscr{I}$ es $\mathscr{H}_\mathbb{L}$.
@@ -72,25 +74,24 @@ Sea $\mathbb{L}$ un lenguaje de primer orden. Una interpretación de Herbrand de
 - Si $f$ es una letra funcional n-aria en $\mathbb{L}$ se le asigna el mapeo que implica $(t_2, t_2, \dots, t_n) \rightarrow f(t_2, t_2, \dots, t_n)$.
 - Si $p$ es una letra predicativa n-aria en $\mathbb{L}$ se le asigna un subconjunto de $\mathscr{H}_\mathbb{L}^n$, es decir, el conjunto de todas las n-tuplas de elementos de $\mathscr{H}_\mathbb{L}$. El significado de $p$ es el conjunto de n-tuplas $\{(t_2, t_2, \dots, t_n) \in \mathscr{H}_\mathbb{L}^n \ / \ \mathscr{I} \vDash p(t_2, t_2, \dots, t_n)\}$, es decir, las tuplas $(t_2, t_2, \dots, t_n)$ de $\mathscr{H}_\mathbb{L}^n$ tales que la interpretación $\mathscr{I}$ hace verdadera a $p(t_2, t_2, \dots, t_n)$.
 
-Dado un conjunto de fórmulas cerradas $S$, los elementos lingüísticos involucrados en sus cláusulas, es decir, sus constantes, letras funcionales y predicativas, definen un lenguaje particular que se denomina el lenguaje de $S$.
-Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que al mismo tiempo es un modelo de $S$. Dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$. Se dice que una interpretación $\mathscr{I}$ es un modelo para un conjunto $S$ de fórmulas bien formadas en $P$, si todas las fórmulas bien formadas de $S$ son verdaderas en dicha interpretación $\mathscr{I}$.
+Dado un conjunto de fórmulas cerradas $S$, los elementos lingüísticos involucrados en sus cláusulas, es decir, sus constantes, letras funcionales y predicativas, definen un lenguaje particular que se denomina lenguaje de $S$.
+Se dice que una interpretación $\mathscr{I}$ es un modelo para un conjunto $S$ de fórmulas bien formadas en $P$, si todas las fórmulas bien formadas de $S$ son verdaderas en dicha interpretación $\mathscr{I}$. Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Al mismo tiempo, un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que al mismo tiempo es un modelo de $S$. Entonces, dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
 Dado un programa $P$, es posible identificar una interpretación de Herbrand de $P$ con un subconjunto de los elementos de la Base de Herbrand de $P$. Dada una interpretación de Herbrand arbitraria $\mathscr{I}$ entonces el subconjunto de $\mathscr{B}_P$ correspondiente a esa interpretación, es el subconjunto de átomos fijos que son verdaderos en la interpretación $\mathscr{I}$.
 Recíprocamente, dado un subconjunto arbitrario de $\mathscr{B}_P$ existe la correspondiente interpretación de Herbrand definida especificando que el mapeo asignado a una letra predicativa mapea una tupla de forma correcta, si el átomo con la misma letra predicativa y los mismos argumentos está en el subconjunto.
 Sea $P$ un programa definido y sea $\{M_i\}_{i \in \mathscr{I}}$ un conjunto no vacío de modelos de Herbarnd de $P$, entonces:
 $$M_p = \cap_{i \in \mathscr{I}} M_i$$
-Es un modelo de Herbrand en $P$. Como cada programa definido $P$ tiene al menos como modelo de Herbrand a $\mathscr{B}_P$ el conjunto de modelos de Herbrand es no vacío. De acuerdo con este lema la intersección de todos los modelos de Herbrand de un programa $P$ es también un modelo de Herbrand de $P$. Este modelo es el ***mímino modelo de Herbrand*** posible para $P$, denotado como $M_P$.
+Es un modelo de Herbrand en $P$. Como cada programa definido $P$ tiene al menos como modelo de Herbrand a $\mathscr{B}_P$ el conjunto de modelos de Herbrand es no vacío. De acuerdo con este lema, la intersección de todos los modelos de Herbrand de un programa $P$ es también un modelo de Herbrand de $P$. Este modelo es el ***mímino modelo de Herbrand*** posible para $P$, denotado como $M_P$.
 La interpretación buscada para el programa $P$ desde el punto de vista del objetivo por el que se construyó el programa puede ser diferente del menor modelo de Herbrand $M_P$, pero esta interpretación parece ser la más natural.
 >[!tldr] Teorema de Interpretación
 >Sea $P$ un programa definido. Si definimos a $M(P)$ de la siguiente manera:
 >$$M(P) = \{A \in \mathscr{B}_P | A \ \text{es una consecuencia lógica de } P\}$$
->Entonces podemos llegar a la conclución de que $M_P = M(P)$.
+>Entonces podemos llegar a la conclusión de que $M_P = M(P)$.
 
 Si deseamos encontrar la interpretación mínima, necesitamos construir el mínimo modelo de Herbrand $M_P$. Una forma de hacer esto es a través de la enumeración sucesiva de sus elementos. Utilizaremos un proceso que se basa en conceptos de *punto fijo*.
 Sea $P$ un programa definido, $fijos(P)$ el conjunto de las instancias fijas de las cláusulas en $P$ e $\mathscr{I}$ una interpretación de Herbrand de $P$. Definimos el ***Operador de Consecuencia Inmediata*** como la aplicación $T_P: \wp(\mathscr{B}_P) \rightarrow \wp(\mathscr{B}_P)$ tal que:
 $$T_P(\mathscr{I}) = \{A \in \mathscr{B}_P | (A \leftarrow A_1, A_2, \dots, A_n) \in fijos(P) \wedge \{A_1, A_2, \dots, A_n\} \in \mathscr{I}\ \}$$
-
-Es posible probar que, para programas definidos, siempre existe una interpretación mínima $\mathscr{I}$ tal que $T_P(\mathscr{I}) = \mathscr{I}$ y que esa interpretación I es también el modelo mínimo de Herbrand $M_P$. Además, $M_P$ es el límite de una secuencia creciente y posiblemente infinita de iteraciones:
-$$\varnothing, \  T_P(\varnothing), \ T_P(T_P(\varnothing)), \ T_P(T_P(\varnothing)), \ \dots$$
+Es posible probar que, para programas definidos, siempre existe una interpretación mínima $\mathscr{I}$ tal que $T_P(\mathscr{I}) = \mathscr{I}$ y que esa interpretación $\mathscr{I}$ es también el modelo mínimo de Herbrand $M_P$. Además, $M_P$ es el límite de una secuencia creciente y posiblemente infinita de iteraciones:
+$$\varnothing, \  T_P(\varnothing), \ T_P(T_P(\varnothing)), \ T_P(T_P(T_P(\varnothing))), \ \dots$$
 La notación estándar para denotar los elementos de la secuencia de interpretaciones es la siguiente:
 $$
 \begin{flalign*}
