--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
@@ -16,7 +16,7 @@ Con fin de introducirnos más en profundidad en los conceptos de la lógica prop
 	- Todas las letras proposicionales.
 	- Si $P$ y $Q$ son fórmulas bien formadas, entonces $(¬P)$, $(P \rightarrow Q)$ también son fórmulas bien formadas (fórmulas compuestas).
 
-Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente nombados se puede apicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar una complejidad innecesaria, se aceptan las siguientes reglas de reescritura:
+Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente nombados, se puede apicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar una complejidad innecesaria, se aceptan las siguientes reglas de reescritura:
 - $(P \wedge Q)$ se escribe como $(¬(P \rightarrow (¬Q)))$.
 - $(P \vee Q)$ se escribe como $((¬P) \rightarrow Q)$.
 - $(P \equiv Q)$ se escribe como $((P \rightarrow Q) \wedge (Q \rightarrow P))$.
@@ -44,7 +44,7 @@ Los conectivos proporcionales son funciones lógicas que tomas argumentos del co
 >2. **Teorema**: $\{ \rightarrow, ¬\}$ es un conjunto suficiente de conectivos. ^conjunto-suficiente-conectivos
 
 Una fórmula bien formada es ***satisfacible*** si es verdadera bajo alguna interpretación. Si dicha fórmula bien formada es siempre verdadera bajo todas sus posibles interpretaciones, dicha fórmula es ***lógicamente válida*** o tautológica. Por otro lado, una fórmula bien formada es ***insatisfacible*** o una contradicción si es falsa bajo todas sus interpretaciones posibles, este tipo de fórmulas se denota con el símbolo $\perp$.
-Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si su tabla de verdad da $V$ para todas sus combinaciones o interpretaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición, aunque existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
+Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si su tabla de verdad da el valor de verdad $V$ para todas sus combinaciones o interpretaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición. Existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
 ### Deducción en la Lógica Proposicional
 La deducción en la lógica proposicional es un poco diferente a la presentada en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 - **Esquema de Axiomas**:
@@ -53,8 +53,7 @@ La deducción en la lógica proposicional es un poco diferente a la presentada e
 		2. $L_2: ((A \rightarrow (B \rightarrow C)) \rightarrow ((A \rightarrow B) \rightarrow (A \rightarrow C)))$.
 		3. $L_3: (((¬B) \rightarrow (¬A)) \rightarrow (((¬B) \rightarrow A) \rightarrow B))$.
 - **Reglas de Inferencia (Modus Ponens)**:
-	- La relación $(A, A \rightarrow B, B)$.
-	- $B$ es una consecuencia directa de $A$ y $A \rightarrow B$, o bien $A, A \rightarrow B \vdash B$.
+	- Dada una relación de la forma $(A, A \rightarrow B, B)$. $B$ es una consecuencia directa de $A$ y $A \rightarrow B$, o bien $A, A \rightarrow B \vdash B$.
 
 Si bien el procedimiento para probar si una hipótesis es deducible o no es el mismo que el explicado anteriormente es conveniente mostrar un ejemplo. Supongamos que queremos probar que de la hipótesis $Q$ se prueba $(P \rightarrow Q)$, es decir $Q \vdash (P \rightarrow Q)$. Para la demostración partiremos del esquema del primer axioma ($L_1$) y de nuestra hipótesis, quedándonos lo siguiente:
 1. $Q \vdash (Q \rightarrow (P \rightarrow Q))$
